--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -37,12 +37,25 @@ body {
 
 		>graph-node {
 			position: absolute;
-			background: blue;
+			background: rgb(0, 0, 255, 0.25);
+			font-size: 2rem;
 			font-weight: bold;
 			aspect-ratio: 1 1;
 			cursor: pointer;
 			width: 5rem;
 			height: 5rem;
+			z-index: 2;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		>graph-edge {
+			position: absolute;
+			background: red;
+			width: 3rem;
+			height: 3rem;
+			z-index: 1;
 		}
 	}
 }
