--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -42,20 +42,21 @@ body {
 			font-weight: bold;
 			aspect-ratio: 1 1;
 			cursor: pointer;
-			width: 5rem;
-			height: 5rem;
 			z-index: 2;
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			width: 5rem;
+			height: 5rem;
+			border-radius: 5rem;
 		}
 
 		>graph-edge {
 			position: absolute;
 			background: red;
-			width: 6rem;
-			height: 2rem;
+			height: 5px;
 			z-index: 1;
+			transform-origin: 0 50%;
 		}
 	}
 }
