--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -51,9 +51,12 @@ body {
 			align-items: center;
 			border-radius: 5rem;
 			box-shadow: 0 0 1rem black;
-			transition: transform ease-in-out 0.125s;
+			transition:
+				background ease-in-out 125ms,
+				transform ease-in-out 125ms;
 
 			&:hover {
+				background: white!important;
 				transform: scale(1.25, 1.25);
 			}
 		}
@@ -63,6 +66,12 @@ body {
 			background: red;
 			z-index: 1;
 			transform-origin: 0 50%;
+			transition: background ease-in-out 125ms;
+			cursor: crosshair;
+
+			&:hover {
+				background: white!important;
+			}
 		}
 
 		>span {
